//Table Relationships

// Category 1 - M SubCategory 1 - M Product
// Vendor 1 - M Product
// SalesRep 1 - M Product
// Product 1 - M InventorySnapshot
// Product 1 - M SalesHistory
// ImportBatch 1 - M SalesHistory
// ImportBatch 1 - M InventorySnapshot
// Role 1 - M AppUser
// Vendor 1 - M SalesRep
// OrderScenario 1 - M OrderScenarioItem
// Product 1 - M OrderScenarioItem
// Product 1 - M ProductFinancial
// ImportBatch 1 - M ProductFinancial
// OrderWeek 1 - M OrderScenario
// OrderScenario 1 - M OrderScenarioDeal
// OrderScenarioDeal 1 - M OrderScenarioItem


// Using Sqlite3 which stores boolean values as either a
// 1 = True / Yes
// 0 = False / No 


Table Category {
    CategoryId int [pk, increment, not null]
    CategoryName varchar(50) [unique]
}

Table SubCategory {
    SubCategoryId int [pk, increment, not null]
    SubCategoryName varchar(50)

    CategoryId int [not null, ref: > Category.CategoryId]
}

Table Vendor {
    VendorId int [pk, increment, not null]
    VendorName varchar(150) [unique]
}

Table  SalesRep {
    SalesRepId int [pk, increment, not null]
    ContactFirstName varchar(50)
    ContactLastName varchar(50)
    ContactPhone varchar(25)
    ContactEmail varchar(255)
    SalesRepPosition varchar(50)

    VendorId int [not null, ref: > Vendor.VendorId]
}

Table Product {
    ProductId int [pk, increment, not null]
    SKU int [unique]   // This would be our in house SKU that we use, it can be null for New products that haven't been added to our system yet 
    ProductName varchar(255)
    Size varchar(50) //1.75L, 750ml, 30pk
    CasePack int // number of bottles or units per case 
    IsSeasonal boolean
    IsDiscontinued boolean
    IsInPOS boolean
    DealLevel int // This is a numeric representation of the deal level, with 1 being the lowest and 5 being the highest. 

    SubCategoryId int [ref: > SubCategory.SubCategoryId]
    VendorId int [ref: > Vendor.VendorId]
    SalesRepId int [ref: > SalesRep.SalesRepId]
}

Table InventorySnapshot {
    InventorySnapshotId int [pk, increment, not null]
    QuantityOnHand int 
    SnapshotDate datetime // The date and time when the inventory snapshot was taken 

    ImportBatchId int [not null, ref: > ImportBatch.ImportBatchId]
    ProductId int [not null, ref: > Product.ProductId]
    
}

Table SalesHistory {
    SalesHistoryId int [pk, increment, not null]
    UnitsSold int
    PeriodStartDate datetime
    PeriodEndDate datetime

    ImportBatchId int [not null, ref: > ImportBatch.ImportBatchId]
    ProductId int [not null, ref: > Product.ProductId]
    
}

Table OrderWeek {
  OrderWeekId int [pk, increment]
  WeekStartDate datetime
  BudgetAmount decimal
  Notes varchar(255)

}

Table OrderScenario {
  OrderScenarioId int [pk, increment]
  ScenarioName varchar(100)
  ScenarioDate datetime
  ExpectedDeliveryDate datetime
  Notes varchar(255)

  OrderWeekId int [ref: > OrderWeek.OrderWeekId]
  VendorId int [ref: > Vendor.VendorId]
  SalesRepId int [ref: > SalesRep.SalesRepId]
  AppUserId int [ref: > AppUser.AppUserId]
}

Table OrderScenarioDeal {
  OrderScenarioDealId int [pk, increment]
  OrderScenarioId int [ref: > OrderScenario.OrderScenarioId]

  DealDescription varchar(150)
  RequiredCases int
}

Table OrderScenarioItem {
  OrderScenarioItemId int [pk, increment]

  OrderScenarioId int [not null, ref: > OrderScenario.OrderScenarioId]
  OrderScenarioDealId int [ref: > OrderScenarioDeal.OrderScenarioDealId]
  ProductId int [ref: > Product.ProductId]

  ProposedCases int
  ProposedBottles int
  FreeCases int
  FreeBottles int

  ProposedUnitCost decimal
  FreeUnitCharge decimal

  TempProductName varchar(150)
  TempSize varchar(50)
  TempCasePack int
  TempNotes varchar(255)

  DisplayOrder int
}

Table ImportBatch {
    ImportBatchId int [pk, increment, not null]
    ImportDate datetime // The date and time when the import was performed
    ReportDate datetime // The Date the import file was created
    FileName varchar(255)
    ImportType varchar(50)
    Status varchar(50)

}

Table Role {
    RoleId int [pk, increment, not null] 
    RoleName varchar(50) [unique]
    
}

Table AppUser {
    AppUserId int [pk, increment]
    Username varchar(100) [not null, unique]
    FirstName varchar(50)
    LastName varchar(50)
    Email varchar(255) [not null, unique]
    IsActive boolean

    RoleId int [not null, ref: > Role.RoleId]

    // PasswordHash varchar(255) // to be added in a later version when I implement authentication
    // MfaEnabled boolean // to be added in a later version when I implement authentication
    
}


Table ProductFinancial {
    ProductFinancialId int [pk, increment]
    EffectiveDate datetime

    ProductId int [ref: > Product.ProductId, not null]
    ImportBatchId int [ref: > ImportBatch.ImportBatchId, not null]

    RetailPrice decimal
    CostPrice decimal
    MarginPercent decimal
    MarginDollars decimal
}